Trivia Hero Angular v1.1

--- a/Project2Trivia/src/app/app.component.css
+++ b/Project2Trivia/src/app/app.component.css
@@ -10,5 +10,6 @@
     width: 100%;
     height: 640px !important; 
     background-color: rgb(28, 12, 71);   
+    background: url('../assets/img/TriviaHeroBg.png');
     
 }
