--- a/Project2Trivia/src/styles.css
+++ b/Project2Trivia/src/styles.css
@@ -1,3 +1,11 @@
+/*
+
+font-family: 'Press Start 2P', cursive;
+font-family: 'Fredericka the Great', cursive;
+font-family: 'ZCOOL KuaiLe', cursive;
+
+*/
+
 /* You can add global styles to this file, and also import other style files */
 body{
     padding: 0;
@@ -6,3 +14,4 @@ body{
     width: 100vw;
     color: #fff;
 }
+
