--- a/Project2Trivia/src/app/components/play-game/play-game.component.html
+++ b/Project2Trivia/src/app/components/play-game/play-game.component.html
@@ -9,13 +9,20 @@
                     USERNAME<br>
                 </div>
                 <div class="col-sm-12 text-center">
+                    RANK GOES HERE
+                </div>
+                <div class="col-sm-12 text-center">
                     LEVEL GOES HERE
                 </div>
                 <div class="col-sm-12 text-center">
-                    Casual Mode
+                    TOTAL POINTS {{this.totalScore}}
                 </div>
                 <div class="col-sm-12 text-center">
-                    TOTAL POINTS {{this.totalScore}}
+                    <ul id="health-bar">
+                        <li class="heart" *ngFor="let heart of this.healthBar">
+                            {{ heart }}
+                        </li>
+                    </ul>
                 </div>
             </div>
 
@@ -32,13 +39,13 @@
         <nav class="col-md-12 text-center fixed-bottom">
             <form>
               <div class="form-group">
-                <input class="form-control" type="text" name="answerParam" [(ngModel)]="value" id="answer-param" placeholder="Enter your answer here!" required/>
+                <input class="form-control" type="text" name="answerParam" [(ngModel)]="value" id="answer-param" placeholder="Enter your answer here!" autocomplete="off" required/>
               </div>
               <div class="form-group">
-                <input class="btn btn-primary" type="button" value="Answer!" (click)="confirmAnswer()">
+                <input class="btn btn-primary" type="button" value="Attack!" (click)="confirmAnswer()">
               </div>
             </form>
-            <button class="btn btn-primary" routerLink="/main-menu">End Game</button>
+            <button class="btn btn-primary" (click)="leaveGame()" routerLink="/main-menu">Flee!</button>
         </nav> 
     </div>
 </div>
