--- a/Project2Trivia/src/app/components/leaderboard/leaderboard.component.css
+++ b/Project2Trivia/src/app/components/leaderboard/leaderboard.component.css
@@ -35,3 +35,23 @@
 .guest-menu-nav-link:hover{
     background-color: rgb(70, 21, 184);
 }
+
+.tablediv {
+    padding:20px;
+  }
+  tbody {
+      display:block;
+      height:400px;
+      overflow:auto;
+  }
+  thead, tbody tr {
+      display:table;
+      width:100%;
+      table-layout:fixed;/* even columns width , fix width of table too*/
+  }
+  thead {
+      width: calc( 100% - 1em )/* scrollbar is average 1em/16px width, remove it from thead width */
+  }
+  table {
+      width:350px;
+  }
