--- a/Project2Trivia/src/app/components/main-menu/main-menu.component.html
+++ b/Project2Trivia/src/app/components/main-menu/main-menu.component.html
@@ -9,8 +9,8 @@
                     Pic
                 </div>
                 <div class="col-sm-9 text-center">
-                    USERNAME<br>
-                    HIGH SCORE
+                    {{user.username}} <br>
+                   {{user.highScore}} 
                 </div>
                 <div class="col-sm-12 text-center">
                     LEVEL GOES HERE
