--- a/Project2Trivia/src/app/components/leaderboard/leaderboard.component.html
+++ b/Project2Trivia/src/app/components/leaderboard/leaderboard.component.html
@@ -13,68 +13,12 @@
             <th>User</th>
             <th>Score</th>
           </thead>
-          <tbody>
-            <tr>
+          <tr *ngFor="let user of users; let i = index">
+              <td>{{i + 1}}</td>
               <td>1</td>
-              <td>GM</td>
-              <td>TriviaGod</td>
-              <td>4771</td>
+              <td>{{user.username}}</td>
+              <td>{{user.highScore}}</td>
             </tr>
-            <tr>
-              <td>2</td>
-              <td>M</td>
-              <td>NotTheButton</td>
-              <td>4820</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr>
-            <tr>
-              <td>5</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr> 
-            <tr>
-              <td>6</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr> 
-            <tr>
-              <td>7</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr>
-            <tr>
-              <td>8</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr>
-            <tr>
-              <td>9</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr>
-            <tr>
-              <td>10</td>
-              <td>D</td>
-              <td>WhoaBoy</td>
-              <td>4625</td>
-            </tr>
-          </tbody>
         </table>
       </div> 
       <!-- register nav  -->
