--- a/Project2Trivia/src/app/components/login/login.component.html
+++ b/Project2Trivia/src/app/components/login/login.component.html
@@ -11,7 +11,7 @@
           <input #username='ngModel' class="form-control" type="text" name="userParam" id="user-param" placeholder="Enter Username" [(ngModel)]='loginObj.username' required/>
         </div>
         <div class="form-group">
-          <input #password='ngModel' class="form-control" type="text" name="passParam" id="pass-param" placeholder="Enter Password" [(ngModel)]='loginObj.password' required/>
+          <input #password='ngModel' class="form-control" type="password" name="passParam" id="pass-param" placeholder="Enter Password" [(ngModel)]='loginObj.password' required/>
         </div>
         <div class="form-group">
          <!-- <input class="btn btn-primary" type="button" value="Login" routerLink="/main-menu">-->
