--- a/Project2Trivia/src/app/components/main-menu/main-menu.component.html
+++ b/Project2Trivia/src/app/components/main-menu/main-menu.component.html
@@ -11,11 +11,8 @@
                 <div class="col-sm-9 text-center">
 
                     my user {{user.username}} <br>
-                  my High Score : {{user.highScore}} 
-                  <br>
-
-                    other {{this.username}}<br>
-                    other High Score: {{this.userHighscore}}
+                  my High Score : {{user.highScore}} <br>
+                  rank : {{this.rank}}
 
                 </div>
                 <div class="col-sm-12 text-center">
@@ -26,7 +23,7 @@
         </div>
         <!-- game logo  -->
         <div class="col-md-12 text-center">
-            <img id="logo" src="../../../assets/img/TriviaLogo1.png">
+            <img id="logo" src="https://s3.us-east-2.amazonaws.com/trivia.reavature.com/img/TriviaLogo1.png">
         </div>
         <!-- guest menu nav  -->
         <nav class="col-md-12 text-center">
