--- a/Project2Trivia/src/app/components/register/register.component.html
+++ b/Project2Trivia/src/app/components/register/register.component.html
@@ -6,21 +6,21 @@
       </div>
       <!-- register form  -->
       <div class="col-md-12 text-center">
-        <form method="POST">
+        <form #registerForm="ngForm" (ngSubmit)="onRegister()">
           <div class="form-group">
-            <input class="form-control" type="text" name="userParam" id="user-param" placeholder="Enter Username" required/>
+            <input #username='ngModel' class="form-control" type="text" name="userParam" id="user-param" placeholder="Enter Username" [(ngModel)]='registerObj.username' required/>
           </div>
           <div class="form-group">
-            <input class="form-control" type="password" name="passParam" id="pass-param" placeholder="Enter Password" required/>
+            <input #password='ngModel' class="form-control" type="password" name="passParam" id="pass-param" placeholder="Enter Password" [(ngModel)]='registerObj.password' required/>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input class="form-control" type="password" name="passConfirmParam" id="pass-confirm-param" placeholder="Confirm Password" required/>
+          </div> -->
+          <div class="form-group">
+            <input #email='ngModel' class="form-control" type="email" name="emailParam" id="email-param" placeholder="Enter Email" [(ngModel)]='registerObj.email' required/>
           </div>
           <div class="form-group">
-            <input class="form-control" type="email" name="emailParam" id="email-param" placeholder="Enter Email" required/>
-          </div>
-          <div class="form-group">
-            <input class="btn btn-primary" type="button" value="Register" routerLink="/guest-menu">
+            <input class="btn btn-primary" type="submit" value="Register">
           </div>
         </form>
       </div> 
