Added question Updator

--- a/Project2Trivia/src/app/components/main-menu/main-menu.component.html
+++ b/Project2Trivia/src/app/components/main-menu/main-menu.component.html
@@ -10,13 +10,13 @@
                 </div>
                 <div class="col-sm-9 text-center">
 
-                    my user {{user.username}} <br>
-                  my High Score : {{user.highScore}} <br>
-                  rank : {{this.rank}}
+                    {{user.username}} <br>
+                  {{user.highScore}} <br>
+                  {{this.rank}}
 
                 </div>
                 <div class="col-sm-12 text-center">
-                    LEVEL GOES HERE
+                    {{user.experience/100}}
                 </div>
             </div>
 
