--- a/Project2Trivia/src/app/components/play-game/play-game.component.html
+++ b/Project2Trivia/src/app/components/play-game/play-game.component.html
@@ -6,7 +6,7 @@
             
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    USERNAME<br>
+                    USERNAME {{user.username}}<br>
                 </div>
                 <div class="col-sm-12 text-center">
                     RANK GOES HERE
