--- a/Project2Trivia/src/app/components/login/login.component.html
+++ b/Project2Trivia/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="row justify-content-center align-self-center">
     <!-- game logo  -->
     <div class="col-md-12 text-center" id="game-title">
-      <img id="logo" src="https://s3.us-east-2.amazonaws.com/trivia.reavature.com/img/TriviaLogo1.png">
+      <img id="logo" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852751/trivia-hero/logo/TriviaLogo1.png">
     </div>
     <!-- login form  -->
     <div class="col-md-12 text-center">
@@ -21,13 +21,13 @@
 
 
     <div class="col-md-12 text-center">
-      <input type="image" class="loginBtn" src="https://s3.us-east-2.amazonaws.com/trivia.reavature.com/img/button-md-top-1.png" (click)="onLogin()">
-      <img class="loginBtn loginBtnBg" src="https://s3.us-east-2.amazonaws.com/trivia.reavature.com/img/button-md-bg-1.png">
+      <input type="image" class="loginBtn" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852557/trivia-hero/buttons/button-md-top-1.png" (click)="onLogin()">
+      <img class="loginBtn loginBtnBg" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852570/trivia-hero/buttons/button-md-bg-1.png">
       <div class="loginBtnTxt">Login</div>
     </div>
     <div class="col-md-12 text-center" routerLink="/guest-menu">
-      <img class="loginBtn" src="https://s3.us-east-2.amazonaws.com/trivia.reavature.com/img/button-md-top-1.png">
-      <img class="loginBtn loginBtnBg" src="https://s3.us-east-2.amazonaws.com/trivia.reavature.com/img/button-md-bg-1.png">
+      <img class="loginBtn" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852557/trivia-hero/buttons/button-md-top-1.png">
+      <img class="loginBtn loginBtnBg" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852570/trivia-hero/buttons/button-md-bg-1.png">
       <div class="loginBtnTxt">Back</div>
     </div>
     <!-- login nav  -->
