--- a/Project2Trivia/src/app/components/leaderboard/leaderboard.component.html
+++ b/Project2Trivia/src/app/components/leaderboard/leaderboard.component.html
@@ -1,29 +1,29 @@
 <div class="container d-flex h-100">
     <div class="row justify-content-center align-self-center">
-      <!-- game logo  -->
-      <div class="col-md-12 text-center" id="game-title">
-        {{pageTitle}}
-      </div>
       <!-- leaderboard table  -->
       <div class="col-md-12 text-center">
-        <table class="table table-bordered table-dark">
-          <thead>
-            <th>#</th>
-            <th>Rank</th>
-            <th>User</th>
-            <th>Score</th>
+        <table class="table table-bordered" id="leaderboardTable">
+          <thead class="fill">
+            <tr>
+              <th>#</th>
+              <th>User</th>
+              <th>Score</th>
+            </tr>
           </thead>
-          <tr *ngFor="let user of users; let i = index">
+          <tbody>
+            <tr *ngFor="let user of users; let i = index">
               <td>{{i + 1}}</td>
-              <td>1</td>
               <td>{{user.username}}</td>
               <td>{{user.highScore}}</td>
             </tr>
+          </tbody>
         </table>
       </div> 
       <!-- register nav  -->
       <div class="col-md-12 text-center">
-        <button class="btn btn-warning" routerLink="/main-menu">Back</button>
+          <input type="image" class="btnTop" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852545/trivia-hero/buttons/Button_Sm_Foreground_v1.png" routerLink="/main-menu">
+          <img class="btnBg" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852563/trivia-hero/buttons/Button_Sm_Background_v1.png">
+          <div class="btnTextSm">Back</div>
       </div>
     </div>
   </div>
