--- a/Project2Trivia/src/app/components/leaderboard/leaderboard.component.css
+++ b/Project2Trivia/src/app/components/leaderboard/leaderboard.component.css
@@ -60,10 +60,12 @@
     width: 100%;
     background-color: rgb(99, 63, 30);
     border: none;
+    color: #fff;
+    overflow: hidden;
 }  
 
 .fill{
-    width: 100%;
+    /*width: 100%;*/
 }
 
 .leaderboardTable tr, 
