--- a/Project2Trivia/src/app/components/play-game/play-game.component.html
+++ b/Project2Trivia/src/app/components/play-game/play-game.component.html
@@ -5,10 +5,10 @@
         <div class="col-md-12 text-center fixed-top">
             
             <div id="profile-card" class="row">
-                <div class="col-sm-6 text-center">
+                <div class="profile-id-section text-center">
                     <img id="rank" src="{{this.rank}}">
                 </div>
-                <div class="col-sm-6 text-center">
+                <div class="profile-id-section text-center">
                     {{user.username}}<br>
                     Level {{user.experience/100}}
                 </div>
