Fixed update issue

--- a/Project2Trivia/src/app/components/main-menu/main-menu.component.html
+++ b/Project2Trivia/src/app/components/main-menu/main-menu.component.html
@@ -12,7 +12,7 @@
 
                     {{user.username}} <br>
                     
-                    Level {{user.experience/100}} <br>
+                    Level {{this.level}} <br>
                     High Score: {{user.highScore}} 
 
                 </div>
