Update Game Function: Articles are removed from API answers

--- a/Project2Trivia/src/app/components/play-game/play-game.component.html
+++ b/Project2Trivia/src/app/components/play-game/play-game.component.html
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-sm-6 text-center">
                     {{user.username}}<br>
-                    Level {{user.experience/100}}
+                    Level {{this.userLevel}}
                 </div>
             </div>
             <div class="row game-stats">
