--- a/Project2Trivia/src/app/components/question-statistics/question-statistics.component.html
+++ b/Project2Trivia/src/app/components/question-statistics/question-statistics.component.html
@@ -11,16 +11,16 @@
     <div class="col-md-12 text-center">
       <table class="table table-bordered table-dark">
         <thead>
-          <th>#</th>
-          <th>Rank</th>
-          <th>User</th>
-          <th>Score</th>
+          <th>Question</th>
+          <th>Percentage Correct</th>
         </thead>
         <tr *ngFor="let question of questions; let i = index">
-            <td>{{i + 1}}</td>
-            <td>1</td>
-            <td>{{question.correctCount}}</td>
-            <td><pie-chart [data]="data1" [config]="config1" [elementId]="elementId1"></pie-chart></td>
+            <td>{{question.question}}</td>
+            <td><div class="col-md-12 text-center"><button class="btn btn-warning" (click)="getData(i)">Data</button></div></td>
+            <!--<td><pie-chart [data]="data1" [config]="config1" [elementId]="elementId"></pie-chart></td>-->
+            <!---data1 = [['Correct', 'Incorrect'],
+  ['Correct',      question.Correct],
+  ['Incorrect',  question.Incorrect]];-->
           </tr>
       </table>
     </div> 
@@ -30,15 +30,6 @@
     </div>
   </div>
 </div>
-
-
-<!--<div class="divTable">
-    <div class="divTableBody">
-        <div class="divTableRow">
-            <div class="divTableCell"><pie-chart [data]="data1" [config]="config1" [elementId]="elementId1"></pie-chart></div>
-        </div>
-    </div>
-</div>-->
 
 
     
