--- a/Project2Trivia/src/app/components/main-menu/main-menu.component.html
+++ b/Project2Trivia/src/app/components/main-menu/main-menu.component.html
@@ -44,7 +44,7 @@
             <img class="btnBg" src="https://res.cloudinary.com/dm1h6zjdu/image/upload/v1550852563/trivia-hero/buttons/Button_Sm_Background_v1.png">
             <div class="btnTextSmX">Logout</div>
         </div>
-        <div class="col-md-12 text-center"><div class="btnTextSmXSpec" routerLink="/question-statistics">Statistics</div>
+        <div class="col-md-12 text-center mb-2"><div class="btnTextSmXSpec" routerLink="/question-statistics">Statistics</div>
         </div>
     </div>
 </div>
