--- a/Project2Trivia/src/app/components/statistics/statistics.component.html
+++ b/Project2Trivia/src/app/components/statistics/statistics.component.html
@@ -3,11 +3,9 @@
 
     <!-- title -->
 
-    <div class="col-md-12 text-center" id="game-title">
-      {{title}}
-    </div>
-
+<div class="col-md-12 w-100">
     <pie-chart [data]="data1" [config]="config1" [elementId]="elementId"></pie-chart>
+    </div>
 
     <!-- statistics buttons -->
 
