--- a/Project2Trivia/src/app/components/play-game-end/play-game-end.component.html
+++ b/Project2Trivia/src/app/components/play-game-end/play-game-end.component.html
@@ -12,7 +12,7 @@
                 {{user.username}}<br>
               </div>
               <div class="col-sm-12 text-center">
-                  LEVEL GOES HERE
+                  LEVEL {{level}}
               </div>
               <div class="col-sm-12 text-center">
                   You've gained {{this.score/(this.right + 1)}} XP!
