--- a/Project2Trivia/src/app/components/pie-chart/pie-chart.component.html
+++ b/Project2Trivia/src/app/components/pie-chart/pie-chart.component.html
@@ -1,1 +1,1 @@
-<div id="{{elementId}}" style="width: 330px; height: 400px;"></div>
+<div id="{{elementId}}" style="width: 330px; height: 400px; background: grey;"></div>
