fixed exp issue

--- a/Project2Trivia/src/app/components/play-game-end/play-game-end.component.html
+++ b/Project2Trivia/src/app/components/play-game-end/play-game-end.component.html
@@ -15,7 +15,7 @@
                   LEVEL {{level}}
               </div>
               <div class="col-sm-12 text-center">
-                  You've gained {{this.score/(this.right + 1)}} XP!
+                  You've gained {{experience}} XP!
               </div>
           </div>
   
